make update-swagger (#69)
Pulls in ConsumptionConfig and ConsumptionBudget
from the unstable API.

Hit an scaffold panic because ConsumptionConfig
has a recursive type, which Swagger doesn't render
correctly (the schema is empty). I carved out the
case by short-circuiting, rather than fixing. This
means scaffold will be broken for
ConsumptionConfig:

```
$ ./bin/chronoctl unstable consumption-config scaffold
api_version: unstable/config
kind: ConsumptionConfigs
spec:
    # partitions define non-overlapping groupings of telemetry. Partitions are
    # defined in order of precedence, where incoming requests are allocated to
    # the first partition that matches. Requests that don't match any
    # partition fall back to an omnipresent default partition.
    partitions: []
```
