# src/generated/swagger/configunstable/models/consumption_budget_resource.go
@@ -1,0 +1,75 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"encoding/json"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+)
+
+// ConsumptionBudgetResource consumption budget resource
+//
+// swagger:model ConsumptionBudgetResource
+type ConsumptionBudgetResource string
+
+func NewConsumptionBudgetResource(value ConsumptionBudgetResource) *ConsumptionBudgetResource {
+	return &value
+}
+
+// Pointer returns a pointer to a freshly-allocated ConsumptionBudgetResource.
+func (m ConsumptionBudgetResource) Pointer() *ConsumptionBudgetResource {
+	return &m
+}
+
+const (
+
+	// ConsumptionBudgetResourceLOGPERSISTEDBYTES captures enum value "LOG_PERSISTED_BYTES"
+	ConsumptionBudgetResourceLOGPERSISTEDBYTES ConsumptionBudgetResource = "LOG_PERSISTED_BYTES"
+)
+
+// for schema
+var consumptionBudgetResourceEnum []interface{}
+
+func init() {
+	var res []ConsumptionBudgetResource
+	if err := json.Unmarshal([]byte(`["LOG_PERSISTED_BYTES"]`), &res); err != nil {
+		panic(err)
+	}
+	for _, v := range res {
+		consumptionBudgetResourceEnum = append(consumptionBudgetResourceEnum, v)
+	}
+}
+
+func (m ConsumptionBudgetResource) validateConsumptionBudgetResourceEnum(path, location string, value ConsumptionBudgetResource) error {
+	if err := validate.EnumCase(path, location, value, consumptionBudgetResourceEnum, true); err != nil {
+		return err
+	}
+	return nil
+}
+
+// Validate validates this consumption budget resource
+func (m ConsumptionBudgetResource) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// value enum
+	if err := m.validateConsumptionBudgetResourceEnum("", "body", m); err != nil {
+		return err
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// ContextValidate validates this consumption budget resource based on context it is used
+func (m ConsumptionBudgetResource) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
